--- a/waybar/.config/waybar/mocha.css
+++ b/waybar/.config/waybar/mocha.css
@@ -23,4 +23,4 @@
 @define-color surface0 #313244;
 @define-color base #1e1e2e;
 @define-color mantle #181825;
-@define-color crust #11111b;
+@define-color crust rgba(17, 17, 27, 0.7);
